--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -117,7 +117,10 @@
   "swap.swapScreen.slippageTolerance": "Slippage tolerance",
   "swap.swapScreen.slippageToleranceInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount",
   "swap.swapScreen.selectPool": "Select pool",
-  "swap.swapScreen.verifiedBy": "Verified by MuesliSwap",
+  "swap.swapScreen.eachVerifiedToken": "Each verified tokens gets",
+  "swap.swapScreen.verifiedBadge": "verified badge",
+  "swap.swapScreen.verifiedBy": "Verified by {pool}",
+  "swap.swapScreen.poolVerificationInfo": "Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
   "swap.swapScreen.assetsIn": "This assets is in my portfolio",
   "swap.swapScreen.defaultSlippage": "Default Slippage Tolerance",
   "swap.swapScreen.slippageInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount.",
@@ -125,6 +128,7 @@
   "swap.swapScreen.swapFees": "Swap fees include the following: • Matchmaker Fee • Frontend Fee • Liquidity Provider Fee",
   "swap.swapScreen.swapMinReceived": "Minimum amount of tokens you can get because of the slippage tolerance.",
   "swap.swapScreen.enterSlippage": "Enter a value from 0% to 100%. You can also enter up to 1 decimal",
+  "swap.swapScreen.poolVerification": "{pool} verification",
   "components.common.navigation.nftGallery": "NFT Gallery",
   "components.receive.addressmodal.BIP32path": "Derivation path",
   "components.receive.addressmodal.copiedLabel": "Copied",
