--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 53,
+      "line": 56,
       "column": 13,
-      "index": 2559
+      "index": 2916
     },
     "end": {
-      "line": 56,
+      "line": 59,
       "column": 3,
-      "index": 2632
+      "index": 2989
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 57,
+      "line": 60,
       "column": 13,
-      "index": 2647
+      "index": 3004
     },
     "end": {
-      "line": 60,
+      "line": 63,
       "column": 3,
-      "index": 2729
+      "index": 3086
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 61,
+      "line": 64,
       "column": 13,
-      "index": 2744
+      "index": 3101
     },
     "end": {
-      "line": 64,
+      "line": 67,
       "column": 3,
-      "index": 2823
+      "index": 3180
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 65,
+      "line": 68,
       "column": 16,
-      "index": 2841
+      "index": 3198
     },
     "end": {
-      "line": 68,
+      "line": 71,
       "column": 3,
-      "index": 2926
+      "index": 3283
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 69,
+      "line": 72,
       "column": 15,
-      "index": 2943
+      "index": 3300
     },
     "end": {
-      "line": 72,
+      "line": 75,
       "column": 3,
-      "index": 3019
+      "index": 3376
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 73,
+      "line": 76,
       "column": 12,
-      "index": 3033
+      "index": 3390
     },
     "end": {
-      "line": 76,
+      "line": 79,
       "column": 3,
-      "index": 3110
+      "index": 3467
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 77,
+      "line": 80,
       "column": 10,
-      "index": 3122
+      "index": 3479
     },
     "end": {
-      "line": 80,
+      "line": 83,
       "column": 3,
-      "index": 3195
+      "index": 3552
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 81,
+      "line": 84,
       "column": 18,
-      "index": 3215
+      "index": 3572
     },
     "end": {
-      "line": 84,
+      "line": 87,
       "column": 3,
-      "index": 3304
+      "index": 3661
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 85,
+      "line": 88,
       "column": 15,
-      "index": 3321
+      "index": 3678
     },
     "end": {
-      "line": 88,
+      "line": 91,
       "column": 3,
-      "index": 3404
+      "index": 3761
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 89,
+      "line": 92,
       "column": 15,
-      "index": 3421
+      "index": 3778
     },
     "end": {
-      "line": 92,
+      "line": 95,
       "column": 3,
-      "index": 3504
+      "index": 3861
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 93,
+      "line": 96,
       "column": 21,
-      "index": 3527
+      "index": 3884
     },
     "end": {
-      "line": 96,
+      "line": 99,
       "column": 3,
-      "index": 3622
+      "index": 3979
     }
   },
   {
@@ -169,29 +169,29 @@
     "defaultMessage": "!!!Slippage Tolerance Info",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 97,
+      "line": 100,
       "column": 25,
-      "index": 3649
+      "index": 4006
     },
     "end": {
-      "line": 100,
+      "line": 103,
       "column": 3,
-      "index": 3753
+      "index": 4110
     }
   },
   {
     "id": "swap.swapScreen.verifiedBy",
-    "defaultMessage": "!!!Verified by MuesliSwap",
+    "defaultMessage": "!!!Verified by {pool}",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 101,
+      "line": 104,
       "column": 14,
-      "index": 3769
+      "index": 4126
     },
     "end": {
-      "line": 104,
+      "line": 107,
       "column": 3,
-      "index": 3861
+      "index": 4214
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 105,
+      "line": 108,
       "column": 12,
-      "index": 3875
+      "index": 4228
     },
     "end": {
-      "line": 108,
+      "line": 111,
       "column": 3,
-      "index": 3973
+      "index": 4326
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 109,
+      "line": 112,
       "column": 19,
-      "index": 3994
+      "index": 4347
     },
     "end": {
-      "line": 112,
+      "line": 115,
       "column": 3,
-      "index": 4095
+      "index": 4448
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 113,
+      "line": 116,
       "column": 16,
-      "index": 4113
+      "index": 4466
     },
     "end": {
-      "line": 116,
+      "line": 119,
       "column": 3,
-      "index": 4251
+      "index": 4604
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 117,
+      "line": 120,
       "column": 14,
-      "index": 4267
+      "index": 4620
     },
     "end": {
-      "line": 121,
+      "line": 124,
       "column": 3,
-      "index": 4448
+      "index": 4801
     }
   },
   {
@@ -259,14 +259,14 @@
     "defaultMessage": "!!!Swap fees include the following:\n   • Matchmaker Fee\n   • Frontend Fee\n   • Liquidity Provider Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 122,
+      "line": 125,
       "column": 12,
-      "index": 4462
+      "index": 4815
     },
     "end": {
-      "line": 128,
+      "line": 131,
       "column": 3,
-      "index": 4628
+      "index": 4981
     }
   },
   {
@@ -274,14 +274,14 @@
     "defaultMessage": "!!!Minimum amount of tokens you can get because of the slippage tolerance.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 129,
+      "line": 132,
       "column": 19,
-      "index": 4649
+      "index": 5002
     },
     "end": {
-      "line": 132,
+      "line": 135,
       "column": 3,
-      "index": 4795
+      "index": 5148
     }
   },
   {
@@ -289,14 +289,74 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 133,
+      "line": 136,
       "column": 17,
-      "index": 4814
+      "index": 5167
     },
     "end": {
-      "line": 136,
+      "line": 139,
       "column": 3,
-      "index": 4952
+      "index": 5305
+    }
+  },
+  {
+    "id": "swap.swapScreen.poolVerification",
+    "defaultMessage": "!!!{pool} verification",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 140,
+      "column": 20,
+      "index": 5327
+    },
+    "end": {
+      "line": 143,
+      "column": 3,
+      "index": 5422
+    }
+  },
+  {
+    "id": "swap.swapScreen.poolVerificationInfo",
+    "defaultMessage": "!!!Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 144,
+      "column": 24,
+      "index": 5448
+    },
+    "end": {
+      "line": 148,
+      "column": 3,
+      "index": 5730
+    }
+  },
+  {
+    "id": "swap.swapScreen.eachVerifiedToken",
+    "defaultMessage": "!!!Each verified tokens gets",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 149,
+      "column": 21,
+      "index": 5753
+    },
+    "end": {
+      "line": 152,
+      "column": 3,
+      "index": 5855
+    }
+  },
+  {
+    "id": "swap.swapScreen.verifiedBadge",
+    "defaultMessage": "!!!verified badge",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 153,
+      "column": 17,
+      "index": 5874
+    },
+    "end": {
+      "line": 156,
+      "column": 3,
+      "index": 5961
     }
   },
   {
@@ -304,14 +364,14 @@
     "defaultMessage": "!!!Open orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 137,
+      "line": 157,
       "column": 14,
-      "index": 4968
+      "index": 5977
     },
     "end": {
-      "line": 140,
+      "line": 160,
       "column": 3,
-      "index": 5049
+      "index": 6058
     }
   },
   {
@@ -319,14 +379,14 @@
     "defaultMessage": "!!!Completed orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 141,
+      "line": 161,
       "column": 19,
-      "index": 5070
+      "index": 6079
     },
     "end": {
-      "line": 144,
+      "line": 164,
       "column": 3,
-      "index": 5161
+      "index": 6170
     }
   },
   {
@@ -334,14 +394,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 145,
+      "line": 165,
       "column": 9,
-      "index": 5172
+      "index": 6181
     },
     "end": {
-      "line": 148,
+      "line": 168,
       "column": 3,
-      "index": 5245
+      "index": 6254
     }
   },
   {
@@ -349,14 +409,14 @@
     "defaultMessage": "!!!Clear",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 149,
+      "line": 169,
       "column": 9,
-      "index": 5256
+      "index": 6265
     },
     "end": {
-      "line": 152,
+      "line": 172,
       "column": 3,
-      "index": 5317
+      "index": 6326
     }
   },
   {
@@ -364,14 +424,14 @@
     "defaultMessage": "!!!Sign transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 153,
+      "line": 173,
       "column": 19,
-      "index": 5338
+      "index": 6347
     },
     "end": {
-      "line": 156,
+      "line": 176,
       "column": 3,
-      "index": 5420
+      "index": 6429
     }
   },
   {
@@ -379,14 +439,14 @@
     "defaultMessage": "!!!Spending Password",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 157,
+      "line": 177,
       "column": 20,
-      "index": 5442
+      "index": 6451
     },
     "end": {
-      "line": 160,
+      "line": 180,
       "column": 3,
-      "index": 5526
+      "index": 6535
     }
   },
   {
@@ -394,14 +454,14 @@
     "defaultMessage": "!!!Enter spending password to sign this transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 161,
+      "line": 181,
       "column": 25,
-      "index": 5553
+      "index": 6562
     },
     "end": {
-      "line": 164,
+      "line": 184,
       "column": 3,
-      "index": 5673
+      "index": 6682
     }
   },
   {
@@ -409,14 +469,14 @@
     "defaultMessage": "!!!Sign",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 165,
+      "line": 185,
       "column": 8,
-      "index": 5683
+      "index": 6692
     },
     "end": {
-      "line": 168,
+      "line": 188,
       "column": 3,
-      "index": 5742
+      "index": 6751
     }
   },
   {
@@ -424,14 +484,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 169,
+      "line": 189,
       "column": 14,
-      "index": 5758
+      "index": 6767
     },
     "end": {
-      "line": 172,
+      "line": 192,
       "column": 3,
-      "index": 5817
+      "index": 6826
     }
   },
   {
@@ -439,14 +499,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 175,
+      "line": 195,
       "column": 11,
-      "index": 5876
+      "index": 6885
     },
     "end": {
-      "line": 178,
+      "line": 198,
       "column": 3,
-      "index": 5971
+      "index": 6980
     }
   },
   {
@@ -454,14 +514,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 179,
+      "line": 199,
       "column": 12,
-      "index": 5985
+      "index": 6994
     },
     "end": {
-      "line": 182,
+      "line": 202,
       "column": 3,
-      "index": 6088
+      "index": 7097
     }
   },
   {
@@ -469,14 +529,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 183,
+      "line": 203,
       "column": 9,
-      "index": 6099
+      "index": 7108
     },
     "end": {
-      "line": 186,
+      "line": 206,
       "column": 3,
-      "index": 6189
+      "index": 7198
     }
   },
   {
@@ -484,14 +544,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 187,
+      "line": 207,
       "column": 16,
-      "index": 6207
+      "index": 7216
     },
     "end": {
-      "line": 190,
+      "line": 210,
       "column": 3,
-      "index": 6303
+      "index": 7312
     }
   },
   {
@@ -499,14 +559,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 191,
+      "line": 211,
       "column": 20,
-      "index": 6325
+      "index": 7334
     },
     "end": {
-      "line": 194,
+      "line": 214,
       "column": 3,
-      "index": 6414
+      "index": 7423
     }
   },
   {
@@ -514,14 +574,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 195,
+      "line": 215,
       "column": 11,
-      "index": 6427
+      "index": 7436
     },
     "end": {
-      "line": 198,
+      "line": 218,
       "column": 3,
-      "index": 6521
+      "index": 7530
     }
   }
 ]
